--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jaxtyping>=0.3.7",
+    "numpy>=2.4.2",
     "requests>=2.32.5",
     "torch>=2.10.0",
 ]
