--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "tqdm>=4.67.3",
     "setuptools>=82.0.0",
     "jaxtyping>=0.3.7",
+    "tensorboard>=2.20.0",
 ]
 
 [tool.setuptools.packages.find]
